# xela_taxel_jsp

./: CMakeLists.txt  PRD.md  README.md  controller_plugins.xml  package.xml  xela_taxel_joint_state_publisher.md
config/: list_2f_gripper_joint.yaml  list_allegrohand_joint.yaml  uscuahl_joint.yaml  uscuahr_joint.yaml  uspr2f_joint.yaml  usprds_joint.yaml  usprhe35_joint.yaml  xela_taxel_jsp_config.yaml
include/xela_taxel_joint_state_publisher/: xela_taxel_joint_state_publisher.hpp
src/: xela_taxel_joint_state_publisher.cpp
